--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -27787,3 +27787,12 @@ msgstr "+%d"
 
 msgid "Delete permanently"
 msgstr "Delete permanently"
+
+msgid "%d minutes before"
+msgstr "%d minutes before"
+
+msgid "%d hours before"
+msgstr "%d hours before"
+
+msgid "%d days before"
+msgstr "%d days before"
