--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -569,5 +569,8 @@
     "Promoted Messages": "Promoted Messages",
     "Are you sure you want to delete %s?": "\u0647\u0644 \u0627\u0646\u062a \u0645\u062a\u0627\u0643\u062f \u0628\u0627\u0646\u0643 \u062a\u0631\u064a\u062f \u062d\u0630\u0641 {0}?",
     "%s's picture": "{0}'s picture",
-    "+%d": "+{0}"
+    "+%d": "+{0}",
+    "%d minutes before": "{0} minutes before",
+    "%d hours before": "{0} hours before",
+    "%d days before": "{0} days before"
 }
