--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -570,5 +570,8 @@
     "Promoted Messages": "Gesponserte Nachrichten",
     "Are you sure you want to delete %s?": "Sind Sie sicher, dass Sie {0} l\u00f6schen m\u00f6chten?",
     "%s's picture": "{0}'s picture",
-    "+%d": "+{0}"
+    "+%d": "+{0}",
+    "%d minutes before": "{0} Minuten vorher",
+    "%d hours before": "{0} Stunden vorher",
+    "%d days before": "{0} Tage vorher"
 }
