--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -547,5 +547,8 @@
     "Promoted Messages": "Promoted Messages",
     "Are you sure you want to delete %s?": "Ste si ist\u00ed, \u017ee chcete zmaza\u0165 {0}?",
     "%s's picture": "{0}'s picture",
-    "+%d": "+{0}"
+    "+%d": "+{0}",
+    "%d minutes before": "{0} minutes before",
+    "%d hours before": "{0} hours before",
+    "%d days before": "{0} days before"
 }
