--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -352,5 +352,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "P\u0159esunout",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
