--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -573,5 +573,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} Minuten vorher",
     "%d hours before": "{0} Stunden vorher",
-    "%d days before": "{0} Tage vorher"
+    "%d days before": "{0} Tage vorher",
+    "Move": "verschieben",
+    "Select the destination folder": "W\u00e4hlen Sie den Zielordner",
+    "Select a folder": "W\u00e4hlen Sie einen Ordner aus",
+    "Move document": "Dokument verschieben"
 }
