--- a/assets/locales/fa_AF.json
+++ b/assets/locales/fa_AF.json
@@ -270,5 +270,7 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
