--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -489,5 +489,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u062c\u0627\u0628\u062c\u0627\u06cc\u06cc",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
