--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -448,5 +448,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Siirr\u00e4",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder",
+    "Move document": "Siirr\u00e4 dokumentti"
 }
