--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -573,5 +573,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes avant",
     "%d hours before": "{0} heures avant",
-    "%d days before": "{0} jours avant"
+    "%d days before": "{0} jours avant",
+    "Move": "D\u00e9placer",
+    "Select the destination folder": "Choisir le dossier de destination",
+    "Select a folder": "Choisir un dossier",
+    "Move document": "D\u00e9placer le document"
 }
