--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -567,5 +567,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u05d6\u05d5\u05d6",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder",
+    "Move document": "\u05d4\u05e2\u05d1\u05e8 \u05de\u05e1\u05de\u05da"
 }
