--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -456,5 +456,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u00c1thelyez",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
