--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -557,5 +557,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Sposta",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder",
+    "Move document": "Sposta il documento"
 }
