--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -368,5 +368,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\uc774\ub3d9",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
