--- a/assets/locales/lt_LT.json
+++ b/assets/locales/lt_LT.json
@@ -423,5 +423,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Perkelti",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
