--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -522,5 +522,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "P\u0101rvietot",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder",
+    "Move document": "P\u0101rvietot dokumentu"
 }
