--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -423,5 +423,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u041f\u0440\u0435\u043c\u0435\u0441\u0442\u0438",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
