--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -528,5 +528,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Przenie\u015b",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder",
+    "Move document": "Przenie\u015b dokument"
 }
