--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -550,5 +550,9 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Presun\u00fa\u0165",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder",
+    "Move document": "Presun\u00fa\u0165 dokument"
 }
