--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -404,5 +404,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Premesti",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
