--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -384,5 +384,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u0e22\u0e49\u0e32\u0e22",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
