--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -427,5 +427,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "Ta\u015f\u0131",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
