--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -452,5 +452,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u79fb\u52a8",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
