--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -425,5 +425,8 @@
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes before",
     "%d hours before": "{0} hours before",
-    "%d days before": "{0} days before"
+    "%d days before": "{0} days before",
+    "Move": "\u79fb\u52d5",
+    "Select the destination folder": "Select the destination folder",
+    "Select a folder": "Select a folder"
 }
