--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -29576,3 +29576,9 @@ msgstr "%d heures avant"
 
 msgid "%d days before"
 msgstr "%d jours avant"
+
+msgid "Select a folder"
+msgstr "Choisir un dossier"
+
+msgid "Select the destination folder"
+msgstr "Choisir le dossier de destination"
