Language: Adding missing variables in pot file

--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -27773,3 +27773,18 @@ msgstr ""
 
 msgid "Delete permanently"
 msgstr ""
+
+msgid "%d minutes before"
+msgstr ""
+
+msgid "%d hours before"
+msgstr ""
+
+msgid "%d days before"
+msgstr ""
+
+msgid "Select a folder"
+msgstr ""
+
+msgid "Select the destination folder"
+msgstr ""
