Language: adding missing translation for user management - refs BT#21824

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -29234,3 +29234,6 @@ msgstr "Wählen Sie einen Ordner aus"
 
 msgid "Select the destination folder"
 msgstr "Wählen Sie den Zielordner"
+
+msgid "All users"
+msgstr "Alle Benutzer"
