--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -29585,3 +29585,24 @@ msgstr "Choisir le dossier de destination"
 
 msgid "All users"
 msgstr "Tous les utilisateurs"
+
+msgid "Edit introduction"
+msgstr "Éditer l'introduction"
+
+msgid "To teacher and tutor"
+msgstr "Pour le professeur et le tuteur"
+
+msgid "To HR only"
+msgstr "Pour les RH uniquement"
+
+msgid "Only for teachers"
+msgstr "Pour les professeurs uniquement"
+
+msgid "Only for students"
+msgstr "Pour les apprenants uniquement"
+
+msgid "Autolaunch settings"
+msgstr "Paramètres d'auto démarrage"
+
+msgid "Auto-launch"
+msgstr "Auto-démarrage"
