Language: Adding json update - refs BT#22247

--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -14,7 +14,7 @@
     "Survey": "Encuesta",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Configuraci\u00f3n de la lleici\u00f3n",
     "My courses": "Los mios cursos",
     "Attach": "Attach",
     "Home": "P\u00e1xina d'entamu",
