--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -18,7 +18,7 @@
     "Surveys": "\u0410\u043d\u043a\u0435\u0442\u0438",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438",
     "My courses": "\u041c\u043e\u0438\u0442\u0435 \u043a\u0443\u0440\u0441\u043e\u0432\u0435",
     "Attach": "Attach",
     "Home": "\u041d\u0430\u0447\u0430\u043b\u043e",
