--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -18,7 +18,7 @@
     "Surveys": "Enquestes",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Configuraci\u00f3 del curs",
     "Sign in": "Accedeix",
     "My courses": "La meva llista de cursos",
     "Attach": "Attach",
