--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -18,7 +18,7 @@
     "Surveys": "Inkestak",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Ikastaroaren ezarpenak",
     "My courses": "Nire ikastaroak",
     "Attach": "Attach",
     "Home": "Hasierakoa",
