--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -15,7 +15,7 @@
     "Surveys": "Kyselyt",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Kurssin asetukset",
     "My courses": "Kurssini",
     "Attach": "Attach",
     "Home": "Projektin kotisivu",
