--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -18,7 +18,7 @@
     "Surveys": "Enqu\u00eates",
     "Tracking": "Tracking",
     "Course maintenance": "Maintenance du cours",
-    "Course setting": "Course setting",
+    "Course settings": "Param\u00e8tres du cours",
     "Sign in": "Connectez-vous",
     "My courses": "Mes cours",
     "Start recording": "Lancer l'enregistrement",
@@ -447,7 +447,7 @@
     "Cancel": "Annuler",
     "Event": "Event",
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
-    "Edit introduction": "Edit introduction",
+    "Edit introduction": "\u00c9diter l'introduction",
     "Show all": "Afficher tout",
     "Hide all": "Masquer tout",
     "Sort": "Trier",
