--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -13,7 +13,7 @@
     "Surveys": "\u610f\u898b\u8abf\u67fb",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "\u30b3\u30fc\u30b9\u306e\u8a2d\u5b9a",
     "My courses": "\u30b3\u30fc\u30b9",
     "Attach": "Attach",
     "Home": "\u30db\u30fc\u30e0",
