--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -18,7 +18,7 @@
     "Surveys": "Aptaujas",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Kursa iestat\u012bjumi",
     "My courses": "Mani kursi",
     "Attach": "Attach",
     "Home": "Mana profila lapas s\u0101kums",
