--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -18,7 +18,7 @@
     "Surveys": "Ankiety",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Ustawienia kursu",
     "My courses": "Lista moich kurs\u00f3w",
     "Attach": "Attach",
     "Home": "Strona g\u0142\u00f3wna",
