--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -18,7 +18,7 @@
     "Surveys": "Pesquisas",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Configura\u00e7\u00f5es do curso",
     "Sign in": "Entrar",
     "My courses": "Cursos",
     "Attach": "Attach",
