--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -13,7 +13,7 @@
     "Survey": "Tapukuy",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Configuraci\u00f3n de la lecci\u00f3n",
     "My courses": "Noqapaq yachachiykuna",
     "Attach": "Attach",
     "Home": "Qallariq",
