--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -17,7 +17,7 @@
     "Surveys": "Sondaje",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Setarile cursului",
     "Sign in": "Conectare",
     "My courses": "Cursurile mele",
     "Attach": "Attach",
