--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -18,7 +18,7 @@
     "Surveys": "Prieskum",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Nastavenie kurzu",
     "Sign in": "Prihl\u00e1si\u0165 sa",
     "My courses": "Moje kurzy",
     "Attach": "Attach",
