--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -9,7 +9,7 @@
     "Groups": "Grupe",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Pode\u0161avanje kursa",
     "My courses": "Moja lista kurseva",
     "Attach": "Attach",
     "Home": "Po\u010detak",
