--- a/assets/locales/sv_SE.json
+++ b/assets/locales/sv_SE.json
@@ -14,7 +14,7 @@
     "Surveys": "Unders\u00f6kning",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Inst\u00e4llningar",
     "My courses": "Mina kurser",
     "Attach": "Attach",
     "Home": "Hem",
