--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -13,7 +13,7 @@
     "Surveys": "Mga Sarbey",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Mga setting ng kurso",
     "My courses": "Aking Mga Kurso",
     "Attach": "Attach",
     "Home": "Home",
