--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -17,7 +17,7 @@
     "Surveys": "\u8c03\u67e5",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "\u8bfe\u7a0b\u8bbe\u7f6e",
     "My courses": "\u6211\u7684\u8bfe\u7a0b",
     "Attach": "Attach",
     "Home": "\u4e3b\u9875",
