--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -18,7 +18,7 @@
     "Surveys": "\u0627\u0644\u0627\u0633\u062a\u0628\u064a\u0627\u0646\u0627\u062a",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "\u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0627\u0644\u0645\u0642\u0631\u0631",
     "Sign in": "\u062a\u0633\u062c\u064a\u0644 \u0627\u0644\u062f\u062e\u0648\u0644",
     "My courses": "\u0645\u0642\u0631\u0631\u0627\u062a\u064a",
     "Start recording": "\u0628\u062f\u0623 \u0627\u0644\u062a\u0633\u062c\u064a\u0644",
