--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -18,7 +18,7 @@
     "Surveys": "Umfragen",
     "Tracking": "Tracking",
     "Course maintenance": "Kurspflege",
-    "Course setting": "Course setting",
+    "Course settings": "Kurs-Einstellungen",
     "Sign in": "Eintragen",
     "My courses": "Meine Kurse",
     "Start recording": "Aufnahme starten",
