--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -18,7 +18,7 @@
     "Surveys": "Encuestas",
     "Tracking": "Tracking",
     "Course maintenance": "Mantenimiento del curso",
-    "Course setting": "Course setting",
+    "Course settings": "Configuraci\u00f3n del curso",
     "Sign in": "Ingresar",
     "My courses": "Mis cursos",
     "Start recording": "Lanzar la grabaci\u00f3n",
@@ -447,7 +447,7 @@
     "Cancel": "Cancelar",
     "Event": "Event",
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
-    "Edit introduction": "Edit introduction",
+    "Edit introduction": "Editar la introduccion",
     "Show all": "Mostrar todos",
     "Hide all": "Ocultar todo",
     "Sort": "Ordenar",
