--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -18,7 +18,7 @@
     "Surveys": "\u0628\u0631\u0631\u0633\u06cc",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u062f\u0631\u0633",
     "My courses": "\u0641\u0647\u0631\u0633\u062a \u062f\u0631\u0648\u0633 \u0645\u0646",
     "Attach": "Attach",
     "Home": "\u0635\u0641\u062d\u0647 \u0627\u0635\u0644\u06cc",
