--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -18,7 +18,7 @@
     "Surveys": "\u05e1\u05e7\u05e8\u05d9\u05dd",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05e7\u05d5\u05e8\u05e1",
     "Sign in": "\u05db\u05e0\u05d9\u05e1\u05d4",
     "My courses": "\u05d4\u05e7\u05d5\u05e8\u05e1\u05d9\u05dd \u05e9\u05dc\u05d9",
     "Start recording": "\u05d4\u05ea\u05d7\u05dc \u05dc\u05d4\u05e7\u05dc\u05d9\u05d8",
