--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -18,7 +18,7 @@
     "Surveys": "Questionari",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Configurazione del modulo",
     "Sign in": "Accedi",
     "My courses": "Corsi",
     "Start recording": "Inizia la registrazione",
