--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -18,7 +18,7 @@
     "Surveys": "Enquete",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Cursus instellingen",
     "Sign in": "Meld aan",
     "My courses": "Mijn cursussen",
     "Attach": "Attach",
