--- a/assets/locales/oc.json
+++ b/assets/locales/oc.json
@@ -18,7 +18,7 @@
     "Surveys": "Surveys",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Course settings",
     "Sign in": "Sign in",
     "My courses": "My courses",
     "Start recording": "Start recording",
