--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -18,7 +18,7 @@
     "Surveys": "Evalvacijski vpra\u0161alniki",
     "Tracking": "Tracking",
     "Course maintenance": "Course maintenance",
-    "Course setting": "Course setting",
+    "Course settings": "Nastavitve te\u010daja",
     "Sign in": "Vpi\u0161i",
     "My courses": "Moji te\u010daji",
     "Start recording": "Pri\u010dni snemanje",
