--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -27812,3 +27812,27 @@ msgstr ""
 
 msgid "Auto-launch"
 msgstr ""
+
+msgid "User registrations by month"
+msgstr ""
+
+msgid "User registrations by day"
+msgstr ""
+
+msgid "No data available for the selected date range"
+msgstr ""
+
+msgid "Back to months"
+msgstr ""
+
+msgid "User registrations by creator"
+msgstr ""
+
+msgid "Tools access"
+msgstr ""
+
+msgid "Courses count"
+msgstr ""
+
+msgid "Courses count by language"
+msgstr ""
