--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -577,5 +577,9 @@
     "Move": "Mover",
     "Select the destination folder": "Seleccione la carpeta de destino",
     "Select a folder": "Seleccione una carpeta",
-    "Move document": "Mover el documento"
+    "Move document": "Mover el documento",
+    "Reminders": "Recordatorios",
+    "Add reminder": "A\u00f1adir recordatorios",
+    "Update introduction links": "Actualizar enlaces de introducci\u00f3n",
+    "Conference Room": "Sala de conferencias"
 }
