--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -576,5 +576,9 @@
     "Move": "\u0646\u0642\u0644",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "\u0646\u0642\u0644 \u0627\u0644\u0645\u0633\u062a\u0646\u062f"
+    "Move document": "\u0646\u0642\u0644 \u0627\u0644\u0645\u0633\u062a\u0646\u062f",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
