--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -481,5 +481,9 @@
     "Move": "Mover",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Mover el documentu"
+    "Move document": "Mover el documentu",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
