--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -556,5 +556,9 @@
     "Move": "Moure",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Moure el document"
+    "Move document": "Moure el document",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
