--- a/assets/locales/cs_CZ.json
+++ b/assets/locales/cs_CZ.json
@@ -354,5 +354,9 @@
     "%d days before": "{0} days before",
     "Move": "P\u0159esunout",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
