--- a/assets/locales/eu_ES.json
+++ b/assets/locales/eu_ES.json
@@ -533,5 +533,9 @@
     "Move": "Aldatu lekuz",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Aldatu lekuz dokumentua"
+    "Move document": "Aldatu lekuz dokumentua",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
