--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -492,5 +492,9 @@
     "%d days before": "{0} days before",
     "Move": "\u062c\u0627\u0628\u062c\u0627\u06cc\u06cc",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
