--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -452,5 +452,9 @@
     "Move": "Siirr\u00e4",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Siirr\u00e4 dokumentti"
+    "Move document": "Siirr\u00e4 dokumentti",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
