--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -571,5 +571,9 @@
     "Move": "\u05d6\u05d5\u05d6",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "\u05d4\u05e2\u05d1\u05e8 \u05de\u05e1\u05de\u05da"
+    "Move document": "\u05d4\u05e2\u05d1\u05e8 \u05de\u05e1\u05de\u05da",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
