--- a/assets/locales/hr_HR.json
+++ b/assets/locales/hr_HR.json
@@ -450,5 +450,9 @@
     "%d days before": "{0} days before",
     "Move": "Premjesti",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
