--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -458,5 +458,9 @@
     "%d days before": "{0} days before",
     "Move": "\u00c1thelyez",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
