--- a/assets/locales/it.json
+++ b/assets/locales/it.json
@@ -561,5 +561,9 @@
     "Move": "Sposta",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Sposta il documento"
+    "Move document": "Sposta il documento",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
