--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -370,5 +370,9 @@
     "%d days before": "{0} days before",
     "Move": "\uc774\ub3d9",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
