--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -526,5 +526,9 @@
     "Move": "P\u0101rvietot",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "P\u0101rvietot dokumentu"
+    "Move document": "P\u0101rvietot dokumentu",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
