--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -547,5 +547,9 @@
     "Move": "Verplaatsen",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Verplaats document"
+    "Move document": "Verplaats document",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
