--- a/assets/locales/nn_NO.json
+++ b/assets/locales/nn_NO.json
@@ -325,5 +325,9 @@
     "%d days before": "{0} days before",
     "Move": "Flytte",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
