--- a/assets/locales/oc.json
+++ b/assets/locales/oc.json
@@ -577,5 +577,9 @@
     "Move": "Move",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Move document"
+    "Move document": "Move document",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
