--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -532,5 +532,9 @@
     "Move": "Przenie\u015b",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Przenie\u015b dokument"
+    "Move document": "Przenie\u015b dokument",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
