--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -540,5 +540,9 @@
     "Move": "Mover",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Mover documento"
+    "Move document": "Mover documento",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
