--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -470,5 +470,9 @@
     "Move": "Kuyuchiy",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Kuchiy qelqa khiputa"
+    "Move document": "Kuchiy qelqa khiputa",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
