--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -545,5 +545,9 @@
     "Move": "Muta",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Muta documentul"
+    "Move document": "Muta documentul",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
