--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -554,5 +554,9 @@
     "Move": "Presun\u00fa\u0165",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Presun\u00fa\u0165 dokument"
+    "Move document": "Presun\u00fa\u0165 dokument",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
