--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -576,5 +576,9 @@
     "Move": "Premakni",
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
-    "Move document": "Premakni dokument"
+    "Move document": "Premakni dokument",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
