--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -386,5 +386,9 @@
     "%d days before": "{0} days before",
     "Move": "\u0e22\u0e49\u0e32\u0e22",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
