--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -367,5 +367,9 @@
     "%d hours before": "{0} hours before",
     "%d days before": "{0} days before",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
