--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -429,5 +429,9 @@
     "%d days before": "{0} days before",
     "Move": "Ta\u015f\u0131",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
