--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -427,5 +427,9 @@
     "%d days before": "{0} days before",
     "Move": "\u79fb\u52d5",
     "Select the destination folder": "Select the destination folder",
-    "Select a folder": "Select a folder"
+    "Select a folder": "Select a folder",
+    "Reminders": "Reminders",
+    "Add reminder": "Add reminder",
+    "Update introduction links": "Update introduction links",
+    "Conference Room": "Conference Room"
 }
