--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -29606,3 +29606,15 @@ msgstr "Paramètres d'auto démarrage"
 
 msgid "Auto-launch"
 msgstr "Auto-démarrage"
+
+msgid "Reminders"
+msgstr "Notifications"
+
+msgid "Add reminder"
+msgstr "Ajouter une notification"
+
+msgid "Update introduction links"
+msgstr "Mettre à jour les liens de l'introduction"
+
+msgid "Conference Room"
+msgstr "Salle de conférence"
