--- a/translations/messages.el.po
+++ b/translations/messages.el.po
@@ -4856,10 +4856,10 @@ msgstr "Επιβεβαίωση"
 msgid "Unsubscribe users from course"
 msgstr "Ακύρωση εγγραφής χρηστών από το μάθημα"
 
-msgid "Missing class name"
+msgid "Missing class title"
 msgstr "Δεν υπάρχει το όνομα της τάξης"
 
-msgid "Class name exists"
+msgid "Class title exists"
 msgstr "Το όνομα της τάξης υπάρχει"
 
 msgid "CSV file import location"
