--- a/translations/messages.mk.po
+++ b/translations/messages.mk.po
@@ -4856,10 +4856,10 @@ msgstr "Потврдува"
 msgid "Unsubscribe users from course"
 msgstr "Отпиши ги корисниците од курсот"
 
-msgid "Missing class name"
+msgid "Missing class title"
 msgstr "Недостасува името на паралелката"
 
-msgid "Class name exists"
+msgid "Class title exists"
 msgstr "Постои името на паралелката"
 
 msgid "CSV file import location"
