--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -4856,10 +4856,10 @@ msgstr "Confirma"
 msgid "Unsubscribe users from course"
 msgstr "Scoate userii de la curs"
 
-msgid "Missing class name"
+msgid "Missing class title"
 msgstr "Lipseste numele clasei"
 
-msgid "Class name exists"
+msgid "Class title exists"
 msgstr "Numele clasei existent!"
 
 msgid "CSV file import location"
