--- a/translations/messages.ast_ES.po
+++ b/translations/messages.ast_ES.po
@@ -4856,10 +4856,10 @@ msgstr "Dar la conformidá"
 msgid "Unsubscribe users from course"
 msgstr "Anular la matrícula de los usuarios nel cursu"
 
-msgid "Missing class name"
+msgid "Missing class title"
 msgstr "Falta'l nome de la clase"
 
-msgid "Class name exists"
+msgid "Class title exists"
 msgstr "El nome de la clase yá esiste"
 
 msgid "CSV file import location"
