--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -4856,10 +4856,10 @@ msgstr "Potvrdit"
 msgid "Unsubscribe users from course"
 msgstr "Odregistrovat uživatele ze školení"
 
-msgid "Missing class name"
+msgid "Missing class title"
 msgstr "Chybí název třídy"
 
-msgid "Class name exists"
+msgid "Class title exists"
 msgstr "Název třídy existuje"
 
 msgid "CSV file import location"
