--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -27890,3 +27890,29 @@ msgstr "Update introduction links"
 msgid "Conference Room"
 msgstr "Conference Room"
 
+msgid "Choose item"
+msgstr "Choose item"
+
+msgid "No result or feedback available."
+msgstr "No result or feedback available."
+
+msgid "Add gradebook comment"
+msgstr "Add gradebook comment"
+
+msgid "Assessments visible"
+msgstr "Assessments visible"
+
+msgid "Assessments invisible"
+msgstr "Assessments invisible"
+
+msgid "Add result"
+msgstr "Add result"
+
+msgid "Student reports"
+msgstr "Student reports"
+
+msgid "Results and feedback per user"
+msgstr "Results and feedback per user"
+
+msgid "Score display custom values"
+msgstr "Score display custom values"
